--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>untitled</artifactId>
+    <groupId>de.hdm_stuttgart.mi</groupId>
+    <artifactId>GameOfLife</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -53,7 +53,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>mainpackage.Main</mainClass>
+                    <mainClass>de.hdm_stuttgart.mi.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
